Fix search results alignment

--- a/imports/ui/css/App.css
+++ b/imports/ui/css/App.css
@@ -26,6 +26,10 @@
   color: #ffffff;
 }
 
+.no-float{
+  float: none;
+}
+
 nav {
   background-color: #4990E2;
   margin-top: 0;
