--- a/imports/ui/css/ClassView.css
+++ b/imports/ui/css/ClassView.css
@@ -37,33 +37,3 @@
   text-align: left !important;
 }
 
-.nav-searchBar ul {
-  width: 96.7% !important;
-}
-
-/* custom widths for searchbar */
-/* Custom, iPhone Retina */
-@media only screen and (min-width : 320px) {
-	#output {
-    width: 57%
-  }
-}
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px) {
-  #output {
-    width: 60%
-  }
-}
-
-@media only screen and (min-width : 1280px) {
-  #output {
-    width: 60.8%
-  }
-}
-
-@media only screen and (min-width : 1280px) {
-  #output {
-    width: 60.8%
-  }
-}
