--- a/imports/ui/css/SearchBar.css
+++ b/imports/ui/css/SearchBar.css
@@ -8,6 +8,7 @@
   width: 100%;
   height: 100%;
   /*padding: 0 10px;*/
+  position: relative;
 }
 
 #search {
@@ -43,8 +44,8 @@
   max-height: 500px;
   overflow-y: auto;
   position: absolute;
-  max-width: 1000px;
-  /* width: 61.5%; */
+  /* max-width: 1000px; */
+  width: 100%;
   z-index: 1;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
@@ -64,31 +65,4 @@
   margin-left: 13px;
   color: #fff;
   font-weight: bold;
-}
-
-/* custom widths for searchbar results */
-/* Custom, iPhone Retina */
-@media only screen and (min-width : 320px) {
-	#output {
-    width: 57%
-  }
-}
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px) {
-  #output {
-    width: 60%
-  }
-}
-
-@media only screen and (min-width : 1280px) {
-  #output {
-    width: 60.8%
-  }
-}
-
-@media only screen and (min-width : 1280px) {
-  #output {
-    width: 60.8%
-  }
 }
